[package]
name = "retro-pixel"
version = "0.1.0"
edition = "2024"
authors = ["Jarrod Doyle <thejarroddoyle@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/JarrodDoyle/retro-pixel"
description = "A simple tool for generating pixelised and palettised images"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
image = "0.25.10"
itertools = "0.14.0"
palette = "0.7.6"
rayon = "1.12.0"
